--- a/Lab2/package.json
+++ b/Lab2/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "bootstrap-select": "^1.13.12",
     "jquery": "^3.4.1",
+    "mdbreact": "^4.25.0",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
