--- a/Lab4/package.json
+++ b/Lab4/package.json
@@ -13,6 +13,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-id-generator": "^3.0.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
